--- a/FamilyTrip/package.json
+++ b/FamilyTrip/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.3",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.7",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
